# Polynomials

./: CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md
src/: calc.c  parser.c  poly.c  poly.h  poly_parser.c  poly_parser.h  poly_stack.c  poly_stack.h  poly_test.c  stack.c
